tests/test_data/ocp-ingress-rshard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: print-headers
    app.kubernetes.io/component: print-headers
    app.kubernetes.io/instance: print-headers
    type: sharded
  name: print-headers
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: print-headers
    weight: 100
  wildcardPolicy: None
